fix: nested binding/accumulate blocks no longer capture each other's aborts
A method-local exception class is one class shared by every invocation,
so a nested Result.binding or Validated.accumulate block's catch also
caught an outer block's abort — heap-polluting the inner Err in binding
and crashing accumulate with NoSuchElementException. Aborts now extend a
package-private Halt base carrying an owner identity token; a boundary
rethrows aborts it does not own, and Result.attempt rethrows Halt
instead of mapping it to an Err. Regression tests cover both nesting
shapes and the attempt pass-through.

Also applies the rest of the full-review findings:
- getOrElse/getOrElseGet reject null fallbacks (no-null-returns rule)
- Validated.fold gains ? super variance; Valid/Invalid requireNonNull
  messages match Ok/Err
- NonEmptyList implements Iterable (head-first) and its Javadoc no
  longer claims to be a List
- Scopes Javadoc corrected: JEP 505 is still preview in Java 25;
  parallel documents task-order accumulation (now asserted in tests)
- README/Javadoc examples use AppError instead of the test-only Failure
- decisions.md: ADR-0 version staleness fixed; ADR-1 false nested-safety
  claims corrected with a dated addendum
- test gaps closed: mapErr/getOrElse family/okValue/errValue,
  Validated queries and bridges, defensive-copy and null-rejection
  assertions, Retry maxAttempts=1, Scopes interruption, interleaved
  accumulate degradation (60 -> 81 tests)

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>